Fix Input text fields are flickering and Add * to required fields

--- a/apps/registration/src/pages/createPatientPage/styles/index.module.scss
+++ b/apps/registration/src/pages/createPatientPage/styles/index.module.scss
@@ -69,14 +69,45 @@
       flex-direction: row;
       gap: 16px;
       width: 100%;
-      align-items: flex-end;
+      align-items: flex-start;
+      padding-bottom: 10px;
 
       .ageInputs {
         flex: 1;
+        position: relative;
+        
+        // Position error messages absolutely within this container
+        div[class*="cds--form-requirement"] {
+          position: absolute;
+          top: 100%;
+          left: 0;
+          margin-top: 2px;
+          z-index: 1;
+        }
       }
     }
 
-    .nameFields,.demographicsFields,.birthInfo,.birthInfoFields{
+    .nameFields {
+      margin-top: 16px;
+      padding-bottom: 10px;
+      
+      > * {
+        flex: 1 1 0;
+        min-width: 0;
+        position: relative;
+        
+        // Position error messages absolutely within this container
+        div[class*="cds--form-requirement"] {
+          position: absolute;
+          top: 100%;
+          left: 0;
+          margin-top: 2px;
+          z-index: 1;
+        }
+      }
+    }
+
+    .demographicsFields,.birthInfo,.birthInfoFields{
       margin-top: 16px;
     }
 
